--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class='bx bxl-github' ></i>
 
                 </a>
-                <a href="#" style="background: #ff0000;"class="link">
+                <a href="https://kenny-chiu.netlify.app/" style="background: #ff0000;"class="link">
                     <i class='bx bxs-home-alt-2' ></i>
 
                 </a>
